force-app/main/default/objects/Case/fields/Edit_Add_Products__c.field-meta.xml
<CustomField>
    <fullName>Edit_Add_Products__c</fullName>
    <formula>HYPERLINK(&quot;/apex/CaseVoluntaryRecall?id=&quot; &amp; Id, &quot;Add/Edit Products&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit / Add Products</label>
    <type>Text</type>
</CustomField>