force-app/main/default/objects/Case/fields/Eligible_for_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Sprint__c</fullName>
    <label>Eligible for Sprint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>