force-app/main/default/objects/Case/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <inlineHelpText>Email address should be formatted with @ and .com for example</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>