force-app/main/default/objects/Case/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <description>Employee number of employee for inclusion on voucher</description>
    <inlineHelpText>Employee number of employee for inclusion on voucher</inlineHelpText>
    <label>Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>