force-app/main/default/objects/Case/fields/Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date__c</fullName>
    <label>Escalation Date</label>
    <type>Date</type>
</CustomField>