force-app/main/default/objects/Case/fields/Estimated_Hours_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_Consumed__c</fullName>
    <description>The number of estimated hours burned</description>
    <label>Estimated Hours Burned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>