force-app/main/default/objects/Case/fields/Estimated_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_Remaining__c</fullName>
    <description>Number of Estimated Hours remaining</description>
    <label>Estimated Hours Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>