force-app/main/default/objects/Case/fields/Exclude_from_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to filter the unwanted cases from reporting metrics</description>
    <inlineHelpText>This field is used to filter unwanted cases from metrics</inlineHelpText>
    <label>Exclude from Metrics</label>
    <type>Checkbox</type>
</CustomField>