force-app/main/default/objects/Case/fields/Executive_Category__c.field-meta.xml
<CustomField>
    <fullName>Executive_Category__c</fullName>
    <description>Business Category for reporting to the executive team.</description>
    <inlineHelpText>Please enter the Executive category in this field.</inlineHelpText>
    <label>Executive Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Topline Revenue</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>