force-app/main/default/objects/Case/fields/Existing_Relationship_with_Company__c.field-meta.xml
<CustomField>
    <fullName>Existing_Relationship_with_Company__c</fullName>
    <label>Existing Relationship with Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>