force-app/main/default/objects/Case/fields/External_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Status__c</fullName>
    <description>Used to identify the case status of the external orgs referenced case</description>
    <inlineHelpText>Used to identify the case status of the external orgs referenced case</inlineHelpText>
    <label>External Case Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>