force-app/main/default/objects/Case/fields/External_Owner__c.field-meta.xml
<CustomField>
    <fullName>External_Owner__c</fullName>
    <label>External Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>