force-app/main/default/objects/Case/fields/Flagged_Account__c.field-meta.xml
<CustomField>
    <fullName>Flagged_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated with the Case&apos;s account ID (used for the lookup). When the account ID is present, this field acts as a flag to populate the case in the Flagged Case Related List on the Account record.</description>
    <inlineHelpText>This field is populated with the Case&apos;s account ID (used for the lookup). When the account ID is present, this field acts as a flag to populate the case in the Flagged Case Related List on the Account record.</inlineHelpText>
    <label>Flagged Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corrective Action Cases</relationshipLabel>
    <relationshipName>FlaggedAccount</relationshipName>
    <type>Lookup</type>
</CustomField>