force-app/main/default/objects/Case/fields/Footwear_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Footwear_Requirements__c</fullName>
    <label>Footwear Requirements</label>
    <type>TextArea</type>
</CustomField>