force-app/main/default/objects/Case/fields/Fraud__c.field-meta.xml
<CustomField>
    <fullName>Fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the case is related to a complaint due to a fraudulent purchase.</description>
    <inlineHelpText>Indicates that the case is related to a complaint due to a fraudulent purchase.</inlineHelpText>
    <label>Fraud</label>
    <type>Checkbox</type>
</CustomField>