force-app/main/default/objects/Case/fields/Help_Desk_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Help_Desk_Ticket_ID__c</fullName>
    <description>The help desk ticket id related to this case
Field Type: GBL
Integrated: Not yet</description>
    <inlineHelpText>The help desk ticket related to this case</inlineHelpText>
    <label>Help Desk Ticket ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>