force-app/main/default/objects/Case/fields/Hierarchy_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Adjustment__c</fullName>
    <label>Hierarchy Adjustment</label>
    <type>TextArea</type>
</CustomField>