force-app/main/default/objects/Case/fields/How_many_people_are_affected__c.field-meta.xml
<CustomField>
    <fullName>How_many_people_are_affected__c</fullName>
    <description>The number of people affected by the change or defect</description>
    <inlineHelpText>How many people are affected by this change or defect? Please estimate the number.</inlineHelpText>
    <label>How many people are affected?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>