force-app/main/default/objects/Case/fields/IA_2_0__c.field-meta.xml
<CustomField>
    <fullName>IA_2_0__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enhancement should be included in IA 2.0</description>
    <inlineHelpText>Enhancement should be included in IA 2.0</inlineHelpText>
    <label>IA 2.0</label>
    <type>Checkbox</type>
</CustomField>