force-app/main/default/objects/Case/fields/If_In_Store_List_Stores_or_Regions__c.field-meta.xml
<CustomField>
    <fullName>If_In_Store_List_Stores_or_Regions__c</fullName>
    <label>If In Store, List Stores or Regions</label>
    <type>TextArea</type>
</CustomField>