force-app/main/default/objects/Case/fields/If_Shoemobile_List_Truck_Stores__c.field-meta.xml
<CustomField>
    <fullName>If_Shoemobile_List_Truck_Stores__c</fullName>
    <label>If Shoemobile, List Truck Stores</label>
    <type>TextArea</type>
</CustomField>