force-app/main/default/objects/Case/fields/If_yes_Please_describe__c.field-meta.xml
<CustomField>
    <fullName>If_yes_Please_describe__c</fullName>
    <label>If yes Please describe</label>
    <type>TextArea</type>
</CustomField>