force-app/main/default/objects/Case/fields/Includes_Subsidiaries_or_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>Includes_Subsidiaries_or_Affiliates__c</fullName>
    <label>Includes Subsidiaries or Affiliates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>