force-app/main/default/objects/Case/fields/Incoming_Email__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate case as incoming email from customer.  Used in a process builder.</description>
    <label>Incoming Email</label>
    <type>Checkbox</type>
</CustomField>