force-app/main/default/objects/Case/fields/Initial_Delinquent_AR__c.field-meta.xml
<CustomField>
    <fullName>Initial_Delinquent_AR__c</fullName>
    <label>Initial Delinquent AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>