force-app/main/default/objects/Case/fields/Invoice_Copy_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Copy_Quantity__c</fullName>
    <description>This is needed to capture the number of Invoice copies requested.</description>
    <inlineHelpText>Please enter the number of Invoice copies requested by the customer.</inlineHelpText>
    <label>Invoice Copy Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>