force-app/main/default/objects/Case/fields/Invoice_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery__c</fullName>
    <label>Invoice Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>