force-app/main/default/objects/Case/fields/Invoice_Delivery_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Adjustment__c</fullName>
    <label>Invoice Delivery Adjustment</label>
    <type>TextArea</type>
</CustomField>