force-app/main/default/objects/Case/fields/Invoice_Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Disputed_Amount__c</fullName>
    <description>Dollar amount that the customer is disputing.</description>
    <inlineHelpText>Dollar amount that the customer is disputing.</inlineHelpText>
    <label>Invoice Disputed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>