force-app/main/default/objects/Case/fields/Invoice_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Dollar_Amount__c</fullName>
    <label>Invoice Dollar Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>