force-app/main/default/objects/Case/fields/Invoice_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency__c</fullName>
    <label>Invoice Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>