force-app/main/default/objects/Case/fields/Invoice_Frequency_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Frequency_Adjustment__c</fullName>
    <label>Invoice Frequency Adjustment</label>
    <type>TextArea</type>
</CustomField>