force-app/main/default/objects/Case/fields/Invoice_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Resolution__c</fullName>
    <description>The action taken that resolved the invoice issue</description>
    <inlineHelpText>The action taken that settled the invoice issue</inlineHelpText>
    <label>Invoice Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
            </value>
            <value>
                <fullName>Write-Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>