force-app/main/default/objects/Case/fields/Invoice_Type_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type_Adjustment__c</fullName>
    <label>Invoice Type Adjustment</label>
    <type>TextArea</type>
</CustomField>