force-app/main/default/objects/Case/fields/IsCorrectiveActionCase__c.field-meta.xml
<CustomField>
    <fullName>IsCorrectiveActionCase__c</fullName>
    <description>Indicates that this is a case created for a problem or complaint requiring action and resolution.</description>
    <inlineHelpText>Indicates that this is a case created for a problem or complaint requiring action and resolution.</inlineHelpText>
    <label>IsCorrectiveActionCase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>