force-app/main/default/objects/Case/fields/ISH_ISH_Lozier_Shelf_97785_Qty__c.field-meta.xml
<CustomField>
    <fullName>ISH_ISH_Lozier_Shelf_97785_Qty__c</fullName>
    <label>ISH Lozier Shelf 97785 Qty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>