force-app/main/default/objects/Case/fields/ISH_Logo_Header_Backer_97781__c.field-meta.xml
<CustomField>
    <fullName>ISH_Logo_Header_Backer_97781__c</fullName>
    <formula>IF(AND(ISPICKVAL( ISH_Slatwall_Backer_Panel_Total__c , &quot;1-8 units&quot;)), &quot;1&quot;,
IF(AND(ISPICKVAL( ISH_Slatwall_Backer_Panel_Total__c , &quot;9-17 units&quot;)), &quot;2&quot;,
IF(AND(ISPICKVAL( ISH_Slatwall_Backer_Panel_Total__c , &quot;18-26 units&quot;)), &quot;3&quot;,&quot; &quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISH Logo Header Backer 97781</label>
    <type>Text</type>
</CustomField>