force-app/main/default/objects/Case/fields/ISH_Lozier_End_Cap_Panel_Total__c.field-meta.xml
<CustomField>
    <fullName>ISH_Lozier_End_Cap_Panel_Total__c</fullName>
    <label>ISH Lozier End Cap Panel Total</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-4 units</fullName>
            </value>
            <value>
                <fullName>5-9 units</fullName>
            </value>
            <value>
                <fullName>10-14 units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>