force-app/main/default/objects/Case/fields/ISH_Lozier_Logo_Header_Backer_97781__c.field-meta.xml
<CustomField>
    <fullName>ISH_Lozier_Logo_Header_Backer_97781__c</fullName>
    <formula>IF(AND(ISPICKVAL( ISH_Lozier_End_Cap_Panel_Total__c , &quot;1-4 units&quot;)), &quot;1&quot;, 
IF(AND(ISPICKVAL( ISH_Lozier_End_Cap_Panel_Total__c , &quot;5-9 units&quot;)), &quot;2&quot;, 
IF(AND(ISPICKVAL( ISH_Lozier_End_Cap_Panel_Total__c , &quot;10-14 units&quot;)), &quot;3&quot;,&quot; &quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISH Lozier Logo Header Backer 97781</label>
    <type>Text</type>
</CustomField>