force-app/main/default/objects/Case/fields/ISH_Merchandising_System_Parts__c.field-meta.xml
<CustomField>
    <fullName>ISH_Merchandising_System_Parts__c</fullName>
    <label>ISH Merchandising System Parts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISH Lozier Shelf  97785</fullName>
                <default>true</default>
                <label>ISH Lozier Shelf  97785</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>