force-app/main/default/objects/Case/fields/ISH_Total_Lozier_Backer_Panels_Total__c.field-meta.xml
<CustomField>
    <fullName>ISH_Total_Lozier_Backer_Panels_Total__c</fullName>
    <label>ISH Total Lozier Backer Panels</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>