force-app/main/default/objects/Case/fields/ISH_Total_Slatwall_Backer_Panels__c.field-meta.xml
<CustomField>
    <fullName>ISH_Total_Slatwall_Backer_Panels__c</fullName>
    <label>ISH Total Slatwall Backer Panels</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>