force-app/main/default/objects/Case/fields/Isnewcase__c.field-meta.xml
<CustomField>
    <fullName>Isnewcase__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates case is new and first time for process builder</description>
    <inlineHelpText>Indicates case is new and first time for process builder</inlineHelpText>
    <label>Isnewcase</label>
    <type>Checkbox</type>
</CustomField>