force-app/main/default/objects/Case/fields/IsROMEscalation__c.field-meta.xml
<CustomField>
    <fullName>IsROMEscalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by TriggerController_Case to reassign the case to the related Account&apos;s ROM one-time only.  This field then will be used by a Workflow to send an email to that ROM.</description>
    <label>ROM Escalation</label>
    <type>Checkbox</type>
</CustomField>