force-app/main/default/objects/Case/fields/ISW_Backer_Panel_Total__c.field-meta.xml
<CustomField>
    <fullName>ISW_Backer_Panel_Total__c</fullName>
    <label>ISW Backer Panel Total</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-8 units</fullName>
            </value>
            <value>
                <fullName>9-17 units</fullName>
            </value>
            <value>
                <fullName>18-26 units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>