force-app/main/default/objects/Case/fields/ISW_Header_97723__c.field-meta.xml
<CustomField>
    <fullName>ISW_Header_97723__c</fullName>
    <formula>IF(AND(ISPICKVAL( ISW_Slatwall_Backer_Panel_Total__c , &quot;1-8 units&quot;)), &quot;1&quot;,
IF(AND(ISPICKVAL( ISW_Slatwall_Backer_Panel_Total__c , &quot;9-17 units&quot;)), &quot;2&quot;,
IF(AND(ISPICKVAL( ISW_Slatwall_Backer_Panel_Total__c , &quot;18-26 units&quot;)), &quot;3&quot;,&quot; &quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISW Header 97723</label>
    <type>Text</type>
</CustomField>