force-app/main/default/objects/Case/fields/ISW_Lozier_Shelf_97715_Qty__c.field-meta.xml
<CustomField>
    <fullName>ISW_Lozier_Shelf_97715_Qty__c</fullName>
    <label>ISW Lozier Shelf 97715 Qty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>