force-app/main/default/objects/Case/fields/ISW_Merchandising_System__c.field-meta.xml
<CustomField>
    <fullName>ISW_Merchandising_System__c</fullName>
    <label>ISW Merchandising System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slatwall</fullName>
            </value>
            <value>
                <fullName>Lozier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>