force-app/main/default/objects/Case/fields/ISW_Merchandising_System_Parts__c.field-meta.xml
<CustomField>
    <fullName>ISW_Merchandising_System_Parts__c</fullName>
    <label>ISW Merchandising System Parts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISW Lozier shelf  97715</fullName>
                <default>true</default>
                <label>ISW Lozier shelf  97715</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>