force-app/main/default/objects/Case/fields/ISW_Total_Slatwall_Backer_Panels__c.field-meta.xml
<CustomField>
    <fullName>ISW_Total_Slatwall_Backer_Panels__c</fullName>
    <label>ISW Total Slatwall Backer Panels</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>