force-app/main/default/objects/Case/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Job title of employee for inclusion on voucher</description>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>