force-app/main/default/objects/Case/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Used to manually identify when we contacted the customer for GSD cases due to the AR data being updated every day.</description>
    <inlineHelpText>Used to manually identify when we contacted the customer for GSD cases due to the AR data being updated every day.</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>