force-app/main/default/objects/Case/fields/Last_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Comment_Date__c</fullName>
    <description>Hidden field updated by associated Workflow rule &apos;Update Case Last Comment Date&apos; when a Comment is added, in order to update the Case Last Modified Date for proper Escalations.</description>
    <label>Last Comment Date</label>
    <type>DateTime</type>
</CustomField>