force-app/main/default/objects/Case/fields/LastEventTime__c.field-meta.xml
<CustomField>
    <fullName>LastEventTime__c</fullName>
    <description>Time of the last platform event to synch to this record</description>
    <inlineHelpText>Time of the last platform event to synch to this record</inlineHelpText>
    <label>Last Event Time</label>
    <type>DateTime</type>
</CustomField>