force-app/main/default/objects/Case/fields/Length_of_Contract_Years__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Contract_Years__c</fullName>
    <label>Length of Contract (Years)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>