force-app/main/default/objects/Case/fields/LT_Business_Benefit__c.field-meta.xml
<CustomField>
    <fullName>LT_Business_Benefit__c</fullName>
    <description>Long-Term Business Benefit</description>
    <inlineHelpText>Please enter the Long-Term Business Benefit here.</inlineHelpText>
    <label>LT Business Benefit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer satisfaction</fullName>
                <color>#78C953</color>
                <label>Customer satisfaction</label>
            </value>
            <value>
                <fullName>Data reliability and consistency</fullName>
                <color>#E27001</color>
                <label>Data reliability and consistency</label>
            </value>
            <value>
                <fullName>Data visibility to support decision-making</fullName>
                <color>#A845DC</color>
                <label>Data visibility to support decision-making</label>
            </value>
            <value>
                <fullName>Expense reduction</fullName>
                <color>#F3D904</color>
                <label>Expense reduction</label>
            </value>
            <value>
                <fullName>Process improvement (simplify, agile, execute)</fullName>
                <color>#A53711</color>
                <label>Process improvement (simplify, agile, execute)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>