force-app/main/default/objects/Case/fields/Make_Internal_Comment_Public__c.field-meta.xml
<CustomField>
    <fullName>Make_Internal_Comment_Public__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will make the Internal Comment public on the case close screen</description>
    <inlineHelpText>If checked, this will make the Internal Comment public on the case close screen</inlineHelpText>
    <label>Make Internal Comment Public</label>
    <type>Checkbox</type>
</CustomField>